add_executable(TUT1 tutorial_1.cpp)
add_executable(Filter DLIP_Tutorial_Filter_Image.cpp)
add_executable(TUT3 filter_demo_webcam.cpp)
add_executable(TUT4 DLIP_Tutorial_Threshold_demo.cpp)
add_executable(TRACKBAR DLIP_Tutorial_ThresholdMorph_trackbar.cpp)
add_executable(HIST_1D DLIP_Tutorial_Histogram_1D_demo_image.cpp)
add_executable(HIST_webcam DLIP_Tutorial_Histogram_1D_demo_webcam.cpp)
add_executable(HIST_Color DLIP_Tutorial_Histogram_demo_image.cpp)